Issue#SB-27325 fix: Unable to click on the content card view on the right due to UI distortion

--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -428,6 +428,7 @@ app-workspace {
 }
 
 .sbt-theme-bg-img {
+  display:none;
   position: fixed;
   z-index: -50;
   left: calculateRem(-106px);
@@ -458,6 +459,7 @@ app-workspace {
 }
 
 .sbt-theme-right-flower {
+  display: none;
   position: fixed;
   bottom: calculateRem(48px);
   width: calculateRem(288px);
